--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
     <img id="marker-shadow" src="img/icon-skimap-25px-shadow.png" />
     <div id="image-wrapper">
         <a href="#" class="btn">Minimize</a>
-        <h2></h2>
-        <ul></ul>
+        <h1 data-text="heading"></h1>
+        <div class="scroll-container">
+            <ul></ul>
+        </div>
     </div>
 
 </body>
