changed menu position

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--<body class="start-animation">-->
     <p id="filter-error" class="error"></p>
     <nav id="filter">
-        <a href="#" class="btn">Menu</a>
+        <a href="#" class="btn right">Menu</a>
     </nav>
     <div id="map">
     </div>
