fixed height & scrolling on navigation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <p id="filter-error" class="error"></p>
     <nav id="filter">
         <a href="#" class="btn right">Menu</a>
+        <div class="scroll-container"></div>
     </nav>
     <div id="map">
     </div>
